syntax = "proto3";

package base;

// Common response message
message BaseResponse {
    bool success = 1;
    string message = 2;
}

// Common request for ID
message IdRequest {
    int32 id = 1;
}

// Common request for creating an entity
message CreateRequest {
    string name = 1; // Can be adjusted based on entity needs
}

// Common request for updating an entity
message UpdateRequest {
    int32 id = 1; // ID for the entity to update
    string name = 2; // Can be adjusted based on entity needs
}

// Common response for fetching an entity
message GetResponse {
    string name = 1; // Can be adjusted based on entity needs
}

// Common response for getting all entities
message GetAllResponse {
    repeated string entities = 1; // Can be adjusted based on entity needs
}
